sort.basic.comb.AlgCombSort11.scala.code
def combSort11() {
  var ecart = getNombreValeurs
  var cpt=0
  var i = 0
  do{cpt=0
    if (ecart>1){
      ecart = (ecart.toDouble / 1.3).toInt
      if cecart==9 || ecart==10){
        ecart=11
      }
    }
    i=0
    while(i+ecart<getNombreValeurs){
      if(plusPetit(i,i+ecart)==false){
        echange(i,i+ecart)
        cpt=1
      }
      i+=1
    }
  }while(ecart >1 || cpt==1)
}
